2018-11-12  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.12.
	* doc/chopstx.texi (VERSION): 1.12.

	* contrib/ackbtn-stm32f103.c (ackbtn_init): Support FST-01 and
	FST-01G, using PA2.
	(ackbtn_disable): Fix to correctly clear pending interrupt.

2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>

	* eventflag.c (eventflag_set_mask): New.

2018-10-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.11.
	* doc/chopstx.texi (VERSION): 1.11.

2018-10-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/ackbtn-stm32f103.c (PINCFG_EDGE): New.
	(ackbtn_init): Use PINCFG_EDGE bit.
	(ackbtn_enable): Configure the edge detector here.
	(ackbtn_disable): Disable the edge detector.

	* chopstx.c (chopstx_poll): Don't clear ->ready here.
	(chx_cond_hook): Set ->ready = 0 when condition does
	not meet.
	(chopstx_claim_irq): Make sure clearing the interrupt.
	(chx_intr_hook): Add the case when ->ready == 1.
	(chopstx_intr_done): Set ->ready = 0.
	(chx_join_hook): Set ->ready = 0 when it is still alive.

2018-09-29  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.10.
	* doc/chopstx.texi (VERSION): 1.10.

2018-09-27  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/ackbtn-stm32f103.c: New.
	* rules.mk [USE_ACKBTN] (CSRC): Add ack-button support.

2018-09-26  NIIBE Yutaka  <gniibe@fsij.org>

	Fix for chopstx_intr_done.  No spurious interrupts.
	* contrib/adc-mkl27z.c (adc_wait_completion): Fix.
	* contrib/adc-stm32f103.c (adc_wait_completion): Likewise.
	* contrib/usart-stm32f103.c (usart_main): Likewise.
	* example-cdc-gnu-linux/usb-cdc.c (tty_main): Likewise.
	* example-cdc/usb-cdc.c (tty_main): Likewise.
	* example-fraucheky/main.c (usb_main): Likewise.
	* example-fs-bb48/touch.c (touch_get): Likewise.
	* example-fs-bb48/usb-cdc.c (tty_main): Likewise.
	* example-primer2/primer2-ts.c (adc3_conversion): Likewise.
	* example-usb-serial/usb-cdc.c (cdc_main): Likewise.

2018-09-26  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (chopstx_intr_done): New function.